# siga

./: .gitignore  INSTALL.md  README.md  anotacion.txt  backupFinal.sql  code.html  console.txt  flowchart LR.mmd  gestor_db1.sql  logs.txt  package-lock.json  package.json  sigavFoliosIndependientesv4.sql  stack.txt
backend/: .env.backup.20260307_143647  .env.example  .env.optimizado.example  env  package-lock.json  package.json
backend/src/: index.js
backend/src/config/: database.js  index.js
backend/src/controllers/: accesos.controller.js  archivo.controller.js  area.controller.js  auth.controller.js  dashboard.controller.js  documento.controller.js  prestamo.controller.js  rol.controller.js  tipoDocumento.controller.js  usuario.controller.js
backend/src/dtos/: usuario.dto.js
backend/src/middlewares/: auth.middleware.js  authorize.middleware.js  csrf.middleware.js  (+6 more)
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
migrations/: sigavFoliosIndependientesv4.sql
scripts/: actualizar-contraseñas.sql  crear-usuario-prueba.js  crear-usuario-prueba.sql  crear-usuario-test.js  crear-usuario-test.sql  debug-login.js  ejecutar-migracion-auditoria.js  fix-admin-password.js  init-db.js  migration-auditoria-sistema.sql  verificar-usuarios.js
sql/: 009_sp_solicitar_prestamo_con_reserva_contexto.sql  010_remove_prestamo_activo_validation.sql  011_resync_consecutivo_area.sql
(+84 files in other folders)
