[package]
name = "siga"
version = "1.0.0"
description = "Sistema Integral de Gestión Administrativa"
authors = ["Gobierno del Estado"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-maximize", "fs-read-dir", "fs-remove-file", "window-hide", "fs-exists", "window-show", "window-minimize", "fs-remove-dir", "fs-read-file", "fs-write-file", "fs-rename-file", "fs-create-dir", "window-unmaximize", "window-start-dragging", "fs-copy-file", "window-unminimize", "window-close", "shell-open", "path-all", "http-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
